# nvda2speechd

./: README.md  compile.sh  justfile
src/client/: Cargo.toml
src/client/src/: lib.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/testclient/: Cargo.toml
src/testclient/src/: main.rs
