[package]
name = "nvda2speechd-client"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
edition = "2021"
description = "nvda2speechd client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

name="nvda2speechd"
crate-type=["dylib"]

[dependencies]

lazy_static="1.4.0"
widestring="0.5.1"
serde={version="1.0.137", features=["derive"]}
rmp-serde="1.1.0"
tungstenite="0.17.2"
url="2.2.2"

