[package]
name = "nvda2speechd-client"
license = "LGPL-2.1-only"
version = "0.1.0"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
edition = "2021"
description = "nvda2speechd client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

name="nvda2speechd"
crate-type=["dylib"]

[dependencies]

widestring="1.1"
serde={version="1.0", features=["derive"]}
rmp-serde="1.3"
tungstenite="0.26"
url="2.5"

