[package]
name = "nvda2speechd"
license = "GPL-3.0-only"
version = "0.1.0"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
edition = "2021"
description = "nvda2speechd server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde={version="1.0", features=["derive"]}
rmp-serde="1.3"
speech-dispatcher="0.16"
tungstenite="0.26"
url="2.5"

